Updated image files

--- a/index.html
+++ b/index.html
@@ -37,12 +37,50 @@
     <section class="gallery card">
       <h2>Photo Gallery</h2>
       <div class="grid">
-        <!-- Repeat this <figure> block for each photo in your images folder -->
         <figure class="photo">
-          <img src="images/PHOTO_FILENAME.jpg" alt="Reunion photo">
-          <figcaption>PHOTO_FILENAME.jpg</figcaption>
+          <img src="images/2025 CLHS Reunion_10b.jpg" alt="Reunion photo: 2025 CLHS Reunion_10b.jpg">
+          <figcaption>2025 CLHS Reunion_10b.jpg</figcaption>
         </figure>
-        <!-- Add more figures here -->
+        <figure class="photo">
+          <img src="images/2025 CLHS Reunion_11b.jpg" alt="Reunion photo: 2025 CLHS Reunion_11b.jpg">
+          <figcaption>2025 CLHS Reunion_11b.jpg</figcaption>
+        </figure>
+        <figure class="photo">
+          <img src="images/2025 CLHS Reunion_14a.jpg" alt="Reunion photo: 2025 CLHS Reunion_14a.jpg">
+          <figcaption>2025 CLHS Reunion_14a.jpg</figcaption>
+        </figure>
+        <figure class="photo">
+          <img src="images/2025 CLHS Reunion_1a.jpg" alt="Reunion photo: 2025 CLHS Reunion_1a.jpg">
+          <figcaption>2025 CLHS Reunion_1a.jpg</figcaption>
+        </figure>
+        <figure class="photo">
+          <img src="images/2025 CLHS Reunion_2b.jpg" alt="Reunion photo: 2025 CLHS Reunion_2b.jpg">
+          <figcaption>2025 CLHS Reunion_2b.jpg</figcaption>
+        </figure>
+        <figure class="photo">
+          <img src="images/2025 CLHS Reunion_3b.jpg" alt="Reunion photo: 2025 CLHS Reunion_3b.jpg">
+          <figcaption>2025 CLHS Reunion_3b.jpg</figcaption>
+        </figure>
+        <figure class="photo">
+          <img src="images/2025 CLHS Reunion_4b.jpg" alt="Reunion photo: 2025 CLHS Reunion_4b.jpg">
+          <figcaption>2025 CLHS Reunion_4b.jpg</figcaption>
+        </figure>
+        <figure class="photo">
+          <img src="images/2025 CLHS Reunion_5b.jpg" alt="Reunion photo: 2025 CLHS Reunion_5b.jpg">
+          <figcaption>2025 CLHS Reunion_5b.jpg</figcaption>
+        </figure>
+        <figure class="photo">
+          <img src="images/2025 CLHS Reunion_6a.jpg" alt="Reunion photo: 2025 CLHS Reunion_6a.jpg">
+          <figcaption>2025 CLHS Reunion_6a.jpg</figcaption>
+        </figure>
+        <figure class="photo">
+          <img src="images/2025 CLHS Reunion_8.jpg" alt="Reunion photo: 2025 CLHS Reunion_8.jpg">
+          <figcaption>2025 CLHS Reunion_8.jpg</figcaption>
+        </figure>
+        <figure class="photo">
+          <img src="images/2025 CLHS Reunion_9.jpg" alt="Reunion photo: 2025 CLHS Reunion_9.jpg">
+          <figcaption>2025 CLHS Reunion_9.jpg</figcaption>
+        </figure>
       </div>
     </section>
 
@@ -52,12 +90,12 @@
     </section>
 
     <footer class="footer card">
-      <p>Built for Concordia High School — Class of 1975. Share this site with classmates using this GitHub Pages link.</p>
+      <p>Built for Concordia High School — Class of 1975. Share this site with classmates using your GitHub Pages link.</p>
     </footer>
   </main>
 
   <script>
-    // Click image to open full size
+    // Click image to open full size in a new tab
     document.querySelectorAll('.gallery img').forEach(img => {
       img.addEventListener('click', () => window.open(img.src, '_blank'));
     });
