--- a/index.html
+++ b/index.html
@@ -39,35 +39,35 @@
       <div class="grid">
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_6a.jpg" alt="Reunion photo: 2025 CLHS Reunion_6a.jpg">
-          <figcaption>2025 CLHS Reunion_6a.jpg</figcaption>
+          <figcaption>2025 CLHS Reunion</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_8.jpg" alt="Reunion photo: 2025 CLHS Reunion_8.jpg">
-          <figcaption>2025 CLHS Reunion_8.jpg</figcaption>
+          <figcaption>1975 Seniors (Leslie and Steve missed the photo)</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_9.jpg" alt="Reunion photo: 2025 CLHS Reunion_9.jpg">
-          <figcaption>2025 CLHS Reunion_9.jpg</figcaption>
+          <figcaption>Group Photo including other years</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_14a.jpg" alt="Reunion photo: 2025 CLHS Reunion_14a.jpg">
-          <figcaption>2025 CLHS Reunion_14a.jpg</figcaption>
+          <figcaption>1975 in the News</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_10b.jpg" alt="Reunion photo: 2025 CLHS Reunion_10b.jpg">
-          <figcaption>2025 CLHS Reunion_10b.jpg</figcaption>
+          <figcaption>2025 CLHS Reunion</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_11b.jpg" alt="Reunion photo: 2025 CLHS Reunion_11b.jpg">
-          <figcaption>2025 CLHS Reunion_11b.jpg</figcaption>
+          <figcaption>Dalene'78, Eileen, Debbie'76, Bryan'73, Marsha, Chuck Kunert, Barbara'76</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_1a.jpg" alt="Reunion photo: 2025 CLHS Reunion_1a.jpg">
-          <figcaption>2025 CLHS Reunion_1a.jpg</figcaption>
+          <figcaption>Bryan'73, Eileen, Marsha, Dalene'78, Debbie'76, Chuck Kunert, Barbara'76, Allison</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_2b.jpg" alt="Reunion photo: 2025 CLHS Reunion_2b.jpg">
-          <figcaption>2025 CLHS Reunion_2b.jpg</figcaption>
+          <figcaption>Bryan'73, Eileen, Marsha, Dalene'78, Debbie'76, Chuck Kunert, Barbara'76, Allison</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_3b.jpg" alt="Reunion photo: 2025 CLHS Reunion_3b.jpg">
