--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <div class="grid">
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_6a.jpg" alt="Reunion photo: 2025 CLHS Reunion_6a.jpg">
-          <figcaption>2025 CLHS Reunion</figcaption>
+          <figcaption>2025 CLHS 50 Year Reunion</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_8.jpg" alt="Reunion photo: 2025 CLHS Reunion_8.jpg">
-          <figcaption>1975 Seniors (Leslie and Steve missed the photo)</figcaption>
+          <figcaption>1975 Seniors Allison, Alan, Kit, Gene, Eileen, Jim, Marsha, Marty, Debbie (Leslie and Steve missed the photo)</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_9.jpg" alt="Reunion photo: 2025 CLHS Reunion_9.jpg">
@@ -55,7 +55,7 @@
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_10b.jpg" alt="Reunion photo: 2025 CLHS Reunion_10b.jpg">
-          <figcaption>2025 CLHS Reunion</figcaption>
+          <figcaption>Kit, Brian'73, Eileen, Marsha, Dalene'78, Allison, Chuck Kunert</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_11b.jpg" alt="Reunion photo: 2025 CLHS Reunion_11b.jpg">
@@ -67,19 +67,19 @@
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_2b.jpg" alt="Reunion photo: 2025 CLHS Reunion_2b.jpg">
-          <figcaption>Bryan'73, Eileen, Marsha, Dalene'78, Debbie'76, Chuck Kunert, Barbara'76, Allison</figcaption>
+          <figcaption>Bryan'73, Marsha, Chuck Kunert, Debbie'76, Allison, Kit</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_3b.jpg" alt="Reunion photo: 2025 CLHS Reunion_3b.jpg">
-          <figcaption>2025 CLHS Reunion_3b.jpg</figcaption>
+          <figcaption>Steve and Jim</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_4b.jpg" alt="Reunion photo: 2025 CLHS Reunion_4b.jpg">
-          <figcaption>2025 CLHS Reunion_4b.jpg</figcaption>
+          <figcaption>Leslie and Gene</figcaption>
         </figure>
         <figure class="photo">
           <img src="images/2025 CLHS Reunion_5b.jpg" alt="Reunion photo: 2025 CLHS Reunion_5b.jpg">
-          <figcaption>2025 CLHS Reunion_5b.jpg</figcaption>
+          <figcaption>2025 CLHS Reunion</figcaption>
         </figure>
       </div>
     </section>
