changed questions to include more people. fixed errors.

--- a/jaybirdy.html
+++ b/jaybirdy.html
@@ -140,7 +140,7 @@
                 { value: 100, question: "Tom W<br> (student body president)", answer: 'He was quoted as saying:<br> "It takes a big man to do a big job. That\'s why I\'m having so much trouble."' },
                 { value: 200, question: "196 total students,<br> 104 girls, 92 boys.", answer: "It was Concordia's total enrollment for the 74 - 75 school year" },
                 { value: 300, question: "44 seniors,<br> 23 girls, 21 boys", answer: "It was Concordia's senior class enrollment for the 74 - 75 school year" },
-                { value: 400, question: "Sandy<br>Allison<br>Debbie<br>Julie<br>JoeEllen<br>Margo", answer: "They were the senior members of the 1974 Concordia Dance Drill Team(6)" },
+                { value: 400, question: "Sandy<br>Allison<br>Debbie<br>Julie<br>JoeEllen<br>Margo<br>Mimi", answer: "They were the senior members of the 1974 Concordia Dance Drill Team(6)" },
                 { value: 500, question: "Allowing the wearing of jeans during school", answer: "The student council on Dec. 3rd, proposed a three week trial of this radical idea." }
             ],
             // Potpourri
@@ -148,32 +148,32 @@
                 { value: 100, question: "Cross Country 1974<br> the only way to go!", answer: "It was the theme for the 1974 cross country season" },
                 { value: 200, question: "Linda<br>Marty<br>Fred<br>Tom P", answer: "In the spring musical \"You're a Good Man, Charlie Brown,\"<br>  these seniors played Lucy, Linus, Schroeder, and Snoopy." },
                 { value: 300, question: "Donna<br> (Cindy got a dictionary for second place)", answer: "Winner of the Oregon German contest, this student spent four weeks in the historic Bavarian city of Nuremberg" },
-                { value: 400, question: "Cindy and Karen", answer: "Two seniors named National Merit Scholars." },
+                { value: 400, question: "Mike, Cindy and Karen", answer: "Seniors received awards from National Merit Scholarship corp." },
                 { value: 500, question: "Linda", answer: "This senior went around writing<br> B E A T L E S<br> on all the freshman foreheads." }
             ],
             // Sports
             [
                 { value: 100, question: "Kit", answer: "This runner represented Concordia at the State Cross Country meet at Lane Community College." },
                 { value: 200, question: "Rick J<br>Rick S<br>Michael", answer: "Seniors on the Men's Cross Country team (3)" },
-                { value: 300, question: "Art<br>Kent<br>Rick E<br>Greg br>Ray<br>Jim<br>Randy<br>Jay<br>Gene<br>Marty<br>Tom W", answer: "Football Seniors (11)" },
+                { value: 300, question: "Art<br>Kent<br>Rick E<br>Greg <br>Ray<br>Jim<br>Randy<br>Jay<br>Gene<br>Marty<br>Tom W", answer: "Football Seniors (11)" },
                 { value: 400, question: "Leslie <br>Elaine <br>Donna ", answer: "Senior Cheerleaders (3)" },
                 { value: 500, question: "Kent<br>Randy <br>Art <br>John <br>Gene <br>Steve <br>Tom W<br>Jim ", answer: "Basketball Seniors (8)" }
             ],
             // Senior Quotes
             [
                 { value: 100, question: "Marsha P", answer: '"Prayer should be our first resource, rather than our last resort."' },
-                { value: 200, question: "Amy ", answer: '"Honey, I\'ve gotta get out of here."' },
+                { value: 200, question: "Shawn", answer: '"If there were no future life, our souls would not thirst for it."' },
                 { value: 300, question: "Theresa ", answer: '"When will I see you again...."' },
                 { value: 400, question: "Karen ", answer: '"Yes, Mr. Krueger, it\'s really me!"' },
                 { value: 500, question: "John ", answer: '"It\'s great to be important,<br> but it\'s more important to be great."' }
             ],
             // You Did What?
             [
-                { value: 100, question: "Allison ", answer: "I rode the World Naked bike ride to celebrate my 60th birthday."},
+                { value: 100, question: "Craig", answer: "I worked for Tim H.(class 74) at a HVAC shop in Portland after graduation."},
                 { value: 200, question: "Cindy ", answer: "I worked as a National Marine Fisheries observer sampling the catch aboard a Soviet processing ship on the Bering Sea" },
                 { value: 300, question: "Alan ", answer: "I learned to play the banjo after hearing Steve Martin say \"It's hard to be sad when you're playing the banjo.\"" },
                 { value: 400, question: "Kent ", answer: "I was the youngest head basketball coach in the NAIA at age 25." },
-                { value: 500, question: "Allison, Alan, and ChatGPT", answer: "We created this website." }
+                { value: 500, question: "Allison ", answer: "I rode the World Naked bike ride to celebrate my 60th birthday."}
             ]
         ];
 
